k8s/ostad-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ostad-server
  namespace: ostad-student-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ostad-server
  template:
    metadata:
      labels:
        app: ostad-server
    spec:
      containers:
      - name: ostad-server
        image: adibazfer/ostad-server:latest
        ports:
        - containerPort: 5050
