k8s/ostad-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ostad-ui
  namespace: ostad-student-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ostad-ui
  template:
    metadata:
      labels:
        app: ostad-ui
    spec:
      containers:
        - name: ostad-ui
          image: ostad-ui:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5173
