k8s/ostad-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ostad-server
  namespace: ostad-student-system
spec:
  type: ClusterIP
  selector:
    app: ostad-server
  ports:
  - port: 5050
    targetPort: 5050
