k8s/ostad-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ostad-ui
  namespace: ostad-student-system
spec:
  type: ClusterIP
  selector:
    app: ostad-ui
  ports:
  - port: 5173
    targetPort: 5173
